--- a/Views/paginaBusqueda.ui
+++ b/Views/paginaBusqueda.ui
@@ -146,9 +146,9 @@ border-radius: 25px;</string>
    <widget class="QTableWidget" name="table_auto">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>80</x>
       <y>290</y>
-      <width>631</width>
+      <width>651</width>
       <height>271</height>
      </rect>
     </property>
@@ -172,6 +172,16 @@ QTableWidget {
     <attribute name="horizontalHeaderDefaultSectionSize">
      <number>209</number>
     </attribute>
+    <row>
+     <property name="text">
+      <string>-</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>-</string>
+     </property>
+    </row>
     <column>
      <property name="text">
       <string>Marca</string>
@@ -205,32 +215,115 @@ QTableWidget {
       </font>
      </property>
     </column>
+    <item row="0" column="0">
+     <property name="text">
+      <string>Toyota</string>
+     </property>
+     <property name="foreground">
+      <brush brushstyle="NoBrush">
+       <color alpha="255">
+        <red>236</red>
+        <green>236</green>
+        <blue>236</blue>
+       </color>
+      </brush>
+     </property>
+    </item>
+    <item row="0" column="1">
+     <property name="text">
+      <string>#1EE032</string>
+     </property>
+     <property name="foreground">
+      <brush brushstyle="NoBrush">
+       <color alpha="255">
+        <red>236</red>
+        <green>236</green>
+        <blue>236</blue>
+       </color>
+      </brush>
+     </property>
+    </item>
+    <item row="0" column="2">
+     <property name="text">
+      <string>100</string>
+     </property>
+     <property name="foreground">
+      <brush brushstyle="NoBrush">
+       <color alpha="255">
+        <red>236</red>
+        <green>236</green>
+        <blue>236</blue>
+       </color>
+      </brush>
+     </property>
+    </item>
+    <item row="1" column="0">
+     <property name="text">
+      <string>Ford</string>
+     </property>
+     <property name="foreground">
+      <brush brushstyle="NoBrush">
+       <color alpha="255">
+        <red>236</red>
+        <green>236</green>
+        <blue>236</blue>
+       </color>
+      </brush>
+     </property>
+    </item>
+    <item row="1" column="1">
+     <property name="text">
+      <string>#E01E1E</string>
+     </property>
+     <property name="foreground">
+      <brush brushstyle="NoBrush">
+       <color alpha="255">
+        <red>236</red>
+        <green>236</green>
+        <blue>236</blue>
+       </color>
+      </brush>
+     </property>
+    </item>
+    <item row="1" column="2">
+     <property name="text">
+      <string>50</string>
+     </property>
+     <property name="foreground">
+      <brush brushstyle="NoBrush">
+       <color alpha="255">
+        <red>236</red>
+        <green>236</green>
+        <blue>236</blue>
+       </color>
+      </brush>
+     </property>
+    </item>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="btn_listar">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>81</width>
+      <x>80</x>
+      <y>250</y>
+      <width>111</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Nirmala UI</family>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>14</pointsize>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">border-style: solid;
 border-width: 3px;
-background-color: rgb(236, 236, 236);
-color: rgb(51, 51, 51);
-border-radius: 10px;</string>
+border-color: rgb(186, 0, 0);
+background-color: rgb(51, 51, 51);
+color: rgb(186, 0, 0);
+border-radius: 25px;</string>
     </property>
     <property name="text">
-     <string>Menu</string>
+     <string>Listar</string>
     </property>
    </widget>
   </widget>
